# vax-action-history

./: .gitattributes  .gitignore  README.md  go.mod  go.sum  test-vectors.json  vax-l0-reference-v0.5.md  vax-l0-reference-v0.6.md
.github/: copilot-instructions.md  test.yml
.github/workflows/: test.yml
c/: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  Makefile  README.md  build_manual.ps1
c/include/: vax.h
c/src/: gi.c  sai.c  verify.c
c/test/: README.md  test_common.h  test_gi.c  test_primitives.c  test_sai.c  test_verify.c
docs/: ARCHITECTURE.md  Migration.md  SPECIFICATION.md
docs/internal/: README_his.md  pipeline-referencev-01.md
go/: .gitignore  README.md  go.mod
go/cmd/doct/: VAX_CGO.md  changelog.md
go/doct/: VAX_GO.md  changelog.md
go/internal/SDTOFactory/builder/: builder.go
go/internal/SDTOFactory/consumer/: consumer.go
go/internal/api/: schema_handler.go
go/internal/jcs/: jcs.go  jcs_test.go
go/internal/sae/: sae.go
go/internal/schema/: generator.go  generator_test.go  profile.go
go/pkg/vax/: vax.go  vax_test.go
go/pkg/vax/jcs/: jcs_cross_lang_test.go
go/pkg/vax/sae/: sae.go  sae_test.go
go/pkg/vax/sdto/: FieldSpec.go  FluentAction.go  SchemaBuilder.go  integration_test.go
go/vax-demo/: main.go
internal/jcs/: jcs.go  jcs_test.go
internal/sae/: sae.go
ts/: CHANGELOG.md  README.md  package-lock.json  package.json  src.tar  tsconfig.json
ts/src/: index.ts  jcs.cross-lang.test.ts  jcs.property.test.ts  jcs.ts  vax.test.ts  vax.ts
ts/src/jcs/: index.ts  jcs.cross-lang.test.ts  jcs.test.ts
ts/src/sae/: index.ts  sae.ts
ts/src/sdto/: FieldSpec.ts  FluentAction.ts  SchemaBuilder.ts  index.ts
